TFP-4629 sikre at avslagsårsak settes + hindre multiple brev (#3171)
* TFP-4629 sikre at avslagsårsak settes + hindre multiple brev

* Leftover filer

* Avslagsårsak i test

* Mer vilkaar

* Enda en test

* Nok en test

* Enda flere tester uten avslårsak

* Mer vilkårsrydding